ChangeLog for KNotes
====================

2006/01/06  Michael Brade <brade@kde.org>

    * fixed #103780: Separate "Clear" action visually from Cut/Copy/Paste
      since it's not doing anything with the clipboard.

2006/01/06  Michael Brade <brade@kde.org>

    * fix enabling/disabling of font and font size combos. Needed especially
      for Kontact where the toolbar is not hidden for non-RichText notes.

2006/01/04  Michael Brade <brade@kde.org>

    * never show the text of the tool buttons
    * don't accept color drops on a locked note

2005/12/30  Michael Brade <brade@kde.org>

    * more correct enabling of edit actions when (un)locking a note

2005/09/06  Michael Brade <brade@kde.org>

    * make note colors in Kicker work again for new notes and on start-up.

2005/09/06  Michael Brade <brade@kde.org>

    * fixed #106724: don't overwrite files without asking for confirmation
      first

2005/08/17  Alejandro Exojo <suy@badopi.org>

    * Allow the selection of the file where the file resource should store the
      notes. If no file is found in the config, fall back to the standard one.

2005/05/30  Michael Brade <brade@kde.org>

    * wish #99853: give KNotes a new and fancy style, configurable in the
      global settings. Thanks to Bera Debajyoti for the initial patch and
      the idea!

2005/04/13  Michael Brade <brade@kde.org>

    * fixed #103777: save note as plain text actually saved it as richt text
      and vice versa

2005/04/11  Michael Brade <brade@kde.org>

    * fixed #101875: also save the note's position when hiding it
    * fixed #102546: don't write the global config file every 60 seconds,
      do it only when the notes are saved as well

2005/02/21  Michael Brade <brade@kde.org>

    * fixed #93001: strikeout text now actually works for multiple paragraphs
      as well.
    * fixed #18059: finished implementation of alarms for the notes

2005/02/05  Michael Brade <brade@kde.org>

    * fixed crash when deleting a note