@@ -370,10 +370,11 @@ KNote::~KNote()
 void KNote::slotKill( bool force )
 {
     if ( !force &&
-         KMessageBox::warningContinueCancel( this,
-            i18n("<qt>Do you really want to delete note <b>%1</b>?</qt>")
-                .arg( m_label->text() ),
-            i18n("Confirm Delete"), KGuiItem( i18n("&Delete"), "editdelete") )
+         KMessageBox::warningContinueCancel( this, 
+             i18n("<qt>Do you really want to delete note <b>%1</b>?</qt>").arg( m_label->text() ),
+             i18n("Confirm Delete"), KGuiItem( i18n("&Delete"), "editdelete" ),
+             "ConfirmDeleteNote"
+         )
          != KMessageBox::Continue )
     {
         return;
