@@ -3,8 +3,9 @@ ChangeLog for KNotes
 
 2006/01/06  Michael Brade <brade@kde.org>
 
-    * fixed #103780: Separate "Clear" action visually from Cut/Copy/Paste
-      since it's not doing anything with the clipboard.
+    * fixed #103780: separate "Clear" action visually from Cut/Copy/Paste
+      since it's not doing anything with the clipboard
+    * fixed #110672: added a "Do not show again" box to the delete note dialog
 
 2006/01/06  Michael Brade <brade@kde.org>
 
